# ask-my-docs-backend

./: .gitignore  checklist.txt  main.py  pyproject.toml  vector_store.py
app/: main.py
app/api/: dependencies.py
app/api/routes/: files.py  query.py
app/core/: schemas.py
app/services/: chat_model.py  file_storage.py  vector_store.py
llms/: chat_model.py
